ajout de bootstrap + ajout du fichier assets

--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -1,1 +1,31 @@
 <p>header works!</p>
+<button type="button" class="btn btn-primary btn-lg">Angulaire</button>
+<nav class="navbar navbar-expand-lg">
+    <div class="container d-flex justify-content-between align-items-center">
+        <a class="navbar-brand" href="acceuil.html">
+            <img src="assets/images/logo/Logo JX-HIFI.png" alt="logo jx-hifi" width="100">
+        </a>
+
+        <div class="input-group w-50">
+            <input class="form-control" style="--bs-border-radius: 20px" type="text" placeholder="Find a product...">
+            <button class="btn" style="--bs-btn-bg: white; --bs-btn-border-radius: 20px" type="submit">
+                <img src="assets/images/icons/search.svg" alt="search_icon" style="height: 1.5em;">
+            </button>
+        </div>
+        
+        <div class="d-flex gap-5">
+            <a class="btnIcon text-center" href="">
+                <img class="imgIcon" src="assets/images/icons/Shop.svg" alt="store_icon">
+                <div class="txtIcon">Stores</div>
+            </a>
+            <a class="btnIcon text-center" href="">
+                <img class="imgIcon" src="assets/images/icons/Profil.svg" alt="account_icon">
+                <div class="txtIcon">Account</div>
+            </a>
+            <a class="btnIcon text-center" href="">
+                <img class="imgIcon" src="assets/images/icons/cart.svg" alt="cart_icon">
+                <div class="txtIcon">Cart</div>
+            </a>
+        </div>
+        </div>
+        </nav>
