initialisation des 3 pages matthieu

--- a/src/app/pages/payment-confirmation-matt/confirmation.component.html
+++ b/src/app/pages/payment-confirmation-matt/confirmation.component.html
@@ -1,5 +1,5 @@
 <!--header-->
-<app-header>header test</app-header>
+<app-header></app-header>
 <!-- form confirmation de transaction -->
 <div class="container frame">
     <form>
@@ -63,4 +63,4 @@
   </div>
 
 <!-- footer -->
-<app-footer>footer test</app-footer>
+<app-footer></app-footer>
