--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -1,15 +1,22 @@
 <nav class="navbar navbar-expand-md">
     <div class="container d-flex justify-content-between align-items-center">
-        <a class="navbar-brand d-none d-md-block" href="acceuil.html">
+        <a class="navbar-brand d-none d-md-block" href="#">
             <img src="assets/images/logo/Logo JX-HIFI.png" alt="logo jx-hifi" width="100">
         </a>
 
-        <div class="searchBar input-group d-flex justify-content-center">
-            <input class="form-control" style="--bs-border-radius: 20px; border: none" type="text"
-                placeholder="Find a product...">
-            <button class="btn" style="--bs-btn-bg: white; --bs-btn-border-radius: 20px" type="submit">
-                <img src="assets/images/icons/search.svg" alt="search_icon" style="height: 1.5em;">
+        <div class="d-flex align-items-center gap-2 w-100 ">
+            <button class="btn d-md-none" id="btnOpenOffcanvas" type="button" data-bs-toggle="offcanvas"
+                data-bs-target=".filterOffcanvas" aria-controls="filterOffcanvas">
+                <img src="assets/images/icons/three-dots.svg" alt="categoryIcon">
             </button>
+
+            <div class="searchBar input-group d-flex">
+                <input class="form-control" style="--bs-border-radius: 20px; border: none" type="text"
+                    placeholder="Find a product...">
+                <button class="btn" style="--bs-btn-bg: white; --bs-btn-border-radius: 20px" type="submit">
+                    <img src="assets/images/icons/search.svg" alt="search_icon" style="height: 1.5em;">
+                </button>
+            </div>
         </div>
 
         <div class="d-none d-md-flex gap-5">
@@ -35,7 +42,121 @@
     <div class="separator"></div>
     <a class="categoryShortcut" href="#">Laptops</a>
     <div class="separator"></div>
-    <a class="categoryShortcut" href="#">Screens</a>
+    <a class="categoryShortcut" href="#">Monitors</a>
     <div class="separator"></div>
     <a class="categoryShortcut" href="#">Phones</a>
+    <div class="separator"></div>
+    <a class="categoryShortcut" href="#">Headphones</a>
+</div>
+
+<div class="categoryNav d-flex d-md-none container-fluid justify-content-around fixed-bottom p-2">
+    <a class="btnIcon text-center" href="">
+        <img class="imgIcon" src="assets/images/icons/home.svg" alt="home_icon">
+    </a>
+    <a class="btnIcon text-center" href="">
+        <img class="imgIcon" src="assets/images/icons/Profil.svg" alt="account_icon">
+    </a>
+    <a class="btnIcon text-center" href="">
+        <img class="imgIcon" src="assets/images/icons/cart.svg" alt="cart_icon">
+    </a>
+</div>
+
+<div class="offcanvas offcanvas-start filterOffcanvas" tabindex="-1" aria-labelledby="filterOffcanvasLabel">
+    <div class="offcanvas-header">
+        <button type="button" id="btnCloseOffcanvas" class="btn-close" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body filterOffCanvansContainer m-5 d-flex flex-column justify-content-center">
+        <!-- Size Filter -->
+        <div class="mb-4">
+            <h5>Size</h5>
+            <div class="filterChoice">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="size1">
+                    <label class="form-check-label" for="size1"> &lt; 14" </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="size2">
+                    <label class="form-check-label" for="size2">15" to 20"</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="size3">
+                    <label class="form-check-label" for="size3">21" to 29"</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="size4">
+                    <label class="form-check-label" for="size4"> 30" to 35" </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="size5">
+                    <label class="form-check-label" for="size5"> &gt; 36"</label>
+                </div>
+            </div>
+        </div>
+
+        <!-- Brand Filter -->
+        <div class="mb-4">
+            <h5>Brand</h5>
+            <div class="filterChoice">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="brand1">
+                    <label class="form-check-label" for="brand1">Samsung</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="brand2">
+                    <label class="form-check-label" for="brand2">HP</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="brand3">
+                    <label class="form-check-label" for="brand3">Dell</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="brand4">
+                    <label class="form-check-label" for="brand4">Tompson</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="brand5">
+                    <label class="form-check-label" for="brand5">BenQ</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="brand6" checked>
+                    <label class="form-check-label" for="brand6">Lenovo</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="brand7">
+                    <label class="form-check-label" for="brand7">Asus</label>
+                </div>
+            </div>
+        </div>
+
+        <!-- Price Filter -->
+        <div class="mb-4">
+            <h5>Price</h5>
+            <div class="priceTxtBox d-flex">
+                <div class="minBox w-50 p-3 my-1">
+                    <div class="input-group">
+                        <input type="text" name="txtMinVal" class="inputField txtMinVal" onchange="setMinInput()">
+                        <span class="currency d-flex align-items-center text-center">$</span>
+                    </div>
+                </div>
+                <div class="maxBox w-50 p-3 my-1">
+                    <div class="input-group">
+                        <input type="text" name="txtMaxVal" class="inputField txtMaxVal" onchange="setMaxInput()" />
+                        <span class="currency d-flex align-items-center text-center">$</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="priceSliders w-75 ms-4">
+                <span class="sliderTrack"></span>
+                <input type="range" class="slideMinVal" name="slideMinVal" min="0" max="1000" value="200"
+                    oninput="slideMin()">
+                <input type="range" class="slideMaxVal" name="slideMaxVal" min="0" max="1000" value="460"
+                    oninput="slideMax()">
+                <div class="tooltip minTooltip"></div>
+                <div class="tooltip maxTooltip"></div>
+            </div>
+
+        </div>
+    </div>
 </div>
