rectification du searchBar en mode phone screen

--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -4,13 +4,13 @@
             <img src="assets/images/logo/Logo JX-HIFI.png" alt="logo jx-hifi" width="100">
         </a>
 
-        <div class="d-flex align-items-center gap-2 w-100 ">
+        <div class="searchBar d-flex align-items-center gap-2 w-100 ">
             <button class="btn d-md-none" id="btnOpenOffcanvas" type="button" data-bs-toggle="offcanvas"
                 data-bs-target=".filterOffcanvas" aria-controls="filterOffcanvas">
                 <img src="assets/images/icons/three-dots.svg" alt="categoryIcon">
             </button>
 
-            <div class="searchBar input-group d-flex">
+            <div class="input-group d-flex">
                 <input class="form-control" style="--bs-border-radius: 20px; border: none" type="text"
                     placeholder="Find a product...">
                 <button class="btn" style="--bs-btn-bg: white; --bs-btn-border-radius: 20px" type="submit">
