commit page acceuil-lion

--- a/src/app/shared/footer-lion/footer.component.html
+++ b/src/app/shared/footer-lion/footer.component.html
@@ -1,1 +1,48 @@
-<p>footer works!</p>
+<footer class="text-center text-lg-start bg-body-tertiary text-muted">
+
+
+    <!-- Section: Links  -->
+    <section class="" style="background-color: #4165C0;">
+        <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <br>
+            <div class="row mt-3">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="color:white">
+                    <!-- Content -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <img src="assets/images/logo/Logo JX-HIFI.png" alt="logo jx-hifi" width="100">
+                    </h6>
+                    <p>
+                        This is our project, its a really cool badasss mofo project
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color:white">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Corporate
+                    </h6>
+                    <p>
+                        <a href="#!" class="text-reset">About Us</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Contact Us</a>
+                    </p>
+
+                </div>
+            </div>
+            <!-- Grid row -->
+        </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: #4165C0; color:white;">
+        © 2024 Bisoux, caresses, et popcorn au chocolat!
+
+    </div>
+    <!-- Copyright -->
+</footer>
