--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-
-<app-footer class="d-none d-md-flex"></app-footer>
+<app-acceuil-lion></app-acceuil-lion>
+<app-footer></app-footer>
