--- a/src/app/pages/acceuil-lion/acceuil-lion.component.html
+++ b/src/app/pages/acceuil-lion/acceuil-lion.component.html
@@ -1,12 +1,12 @@
 <!--Carousel-->
-<div id="carouselPromo" class="carousel slide">
+<div id="carouselPromo" class="carousel slide" data-bs-ride="carousel">
 
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselPromoIndicators" data-bs-slide-to="0" class="active"
+        <button type="button" data-bs-target="#carouselPromo" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselPromoIndicators" data-bs-slide-to="1"
+        <button type="button" data-bs-target="#carouselPromo" data-bs-slide-to="1"
             aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselPromoIndicators" data-bs-slide-to="2"
+        <button type="button" data-bs-target="#carouselPromo" data-bs-slide-to="2"
             aria-label="Slide 3"></button>
     </div>
 
@@ -41,58 +41,55 @@
 <!--Categories, which i have to make more responsive-->
         <div class="container">
             <h1>Categories</h1>
-            <div class="row gy-5">
+            <div class="row gy-5 d-flex align-items-stretch ">
         
-                <div class="col-sm-3 mb-3 mb-sm-0">
-                    <div class="card">
+                <div class="col-sm-3 mb-3">
+                    <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">Sale</h5>
-                            <img src="/assets/images/categories/sale-logo.jpg" style="width: 200px; height: 200px;" alt="">
+                            <label class="card-title text-wrap fs-5">Sale</label> 
+                            <img class="img-fluid" src="/assets/images/categories/sale-logo.jpg" alt="">
                         </div>
-        
                     </div>
                 </div>
         
-                <div class="col-sm-3 mb-3 mb-sm-0">
-                    <div class="card">
+                <div class="col-sm-3 mb-3">
+                    <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">Desktops</h5>
-                            <img src="/assets/images/categories/tower.jpg" style="width: 200px; height: 200px;" alt="">
+                            <label class="card-title text-wrap fs-5">Desktops</label>
+                            <img class="img-fluid" src="/assets/images/categories/tower.jpg" alt="">
                         </div>
-        
                     </div>
                 </div>
         
-                <div class="col-sm-3 mb-3 mb-sm-0">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Laptops</h5>
-                            <img src="/assets/images/categories/laptop.jpg" style="width: 200px; height: 200px;" alt="">
+                <div class="col-sm-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body ">
+                            <label class="card-title text-wrap fs-5">Laptops</label>
+                            <img class="img-fluid" src="/assets/images/categories/laptop.jpg"  alt="">
                         </div>
-        
                     </div>
                 </div>
         
-                <div class="col-sm-3 mb-3 mb-sm-0">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Screens</h5>
-                            <img src="/assets/images/categories/monitor.jfif" style="width: 300px; height: 200px;" alt="">
+                <div class="col-sm-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body text-center">
+                            <label class="card-title text-wrap fs-5">Screens</label>
+                            <img class="img-fluid" src="/assets/images/categories/monitor.jfif"  alt="">
                         </div>
-        
                     </div>
                 </div>
         
-                <div class="col-sm-3 mb-3 mb-sm-0">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Phones</h5>
-                            <img src="/assets/images/categories/phone.jfif" style="width: 200px; height: 200px;" alt="">
+                <div class="col-sm-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body text-center">
+                            <label class="card-title text-wrap fs-5">Phones</label>
+                            <img class="img-fluid" src="/assets/images/categories/phone.jfif" alt="">
                         </div>
-        
                     </div>
                 </div>
+
             </div>
         </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
