creation of login page component

--- a/src/app/pages/support-lion/support-lion.component.html
+++ b/src/app/pages/support-lion/support-lion.component.html
@@ -1,1 +1,293 @@
-<p>support-lion works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <img src="/images/Support/customerS..png" class="support-image">
+        </div>
+    </div>
+</div>
+
+<br>
+
+<div class="container">
+    <div class="row gy-5"><!--Beginning of column 1-->
+        <div class="col-sm-2" style="border-radius: 15px;">
+            <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action active" id="list-faq-list" data-bs-toggle="list"
+                    href="#faq-section" role="tab" aria-controls="faq">FAQ</a>
+                <a class="list-group-item list-group-item-action" id="list-contact-list" data-bs-toggle="list"
+                    href="#contact-us" role="tab" aria-controls="contact">Contact Us</a>
+                <a class="list-group-item list-group-item-action" id="list-support-list" data-bs-toggle="list"
+                    href="#tech-support" role="tab" aria-controls="support">Technical Support</a>
+                <a class="list-group-item list-group-item-action" id="list-shipping-list" data-bs-toggle="list"
+                    href="#shipping-policy" role="tab" aria-controls="shipping">Shipping Policy</a>
+            </div>
+        </div> <!--End of column 1-->
+
+        <div class="col-10"> <!--Begin col 2-->
+            <div class="tab-content" id="nav-tabContent">
+                <!--Begin Accordion for FAQ Section-->
+                <div class="tab-pane fade show active" id="faq-section" role="tabpanel" aria-labelledby="list-faq-list">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Are you open on holidays?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
+                                    until the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes
+                                    control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
+                                    any of this with
+                                    custom CSS or overriding our default variables. It's also worth noting that just
+                                    about any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Do you ship to my house, or do I need to come in store?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                    until the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes
+                                    control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
+                                    any of this with
+                                    custom CSS or overriding our default variables. It's also worth noting that just
+                                    about any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    How can I upgrade my insurance policy?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes
+                                    control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
+                                    any of this with
+                                    custom CSS or overriding our default variables. It's also worth noting that just
+                                    about any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!--End Accordiion for FAQ section-->
+
+
+
+                <div class="tab-pane fade" id="contact-us" role="tabpanel" aria-labelledby="list-contact-list">
+                    <!--Begin Contact Us form-->
+                    <form class="contact-form">
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="mb-3"> <!--FIRST NAME-->
+                                    <label for="firstName" class="form-label">First Name</label>
+                                    <input type="" class="form-control" id="firstName" aria-describedby="">
+                                </div>
+                            </div>
+
+
+                            <div class="col-6">
+                                <div class="mb-3"> <!--PACKAGE NUMBER-->
+                                    <label for="" class="form-label">Package Number (optional)</label>
+                                    <input type="" class="form-control" id="">
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="mb-3"> <!--LAST NAME-->
+                                    <label for="firstName" class="form-label">Last Name</label>
+                                    <input type="email" class="form-control" id="firstName"
+                                        aria-describedby="emailHelp">
+
+                                </div>
+                            </div>
+
+
+                            <div class="col-6">
+                                <div class="mb-3"> <!--EMAIL-->
+                                    <label for="" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="">
+                                    <div class="form-text">We'll never share your email with anyone else.</div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="row-message">
+                            <div class="col-12">
+                                <div class="mb-3">
+                                    <label for="firstName" class="form-label">Message</label>
+                                    <textarea rows="8" placeholder="Write your comments here : " class="form-control"
+                                        id="exampleFormControlTextarea1"></textarea>
+                                </div>
+                            </div>
+
+                            <div class="btn btn-primary send">Send</div>
+                        </div>
+
+                    </form>
+                </div> <!--End Contact us Form-->
+
+
+                <!--Begin Tech Support Div-->
+                <div class="tab-pane fade" id="tech-support" role="tabpanel" aria-labelledby="list-messages-list">
+                    <div class="row">
+                        <div class="col-6">
+
+                            <div class="row">
+                                <h2>Customer Support Staff</h2>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>Toll-Free</h5>
+                                </div>
+                                <div class="col">
+                                    <label>1-800-999-9999</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>Canada</h5>
+                                </div>
+                                <div class="col">
+                                    <label>1-800-555-5599</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>US</h5>
+                                </div>
+                                <div class="col">
+                                    <label>1-800-444-4499</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>Email Us</h5>
+                                </div>
+                                <div class="col">
+                                    <label>billiechouinard&#64;gmail.com</label>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-6">
+                            <div class="row">
+                                <h2>Technical Support Staff</h2>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>Toll-Free</h5>
+                                </div>
+                                <div class="col">
+                                    <label>1-801-115-9999</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>Canada</h5>
+                                </div>
+                                <div class="col">
+                                    <label>1-801-225-5599</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>US</h5>
+                                </div>
+                                <div class="col">
+                                    <label>1-801-335-4499</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <h5>Email Us</h5>
+                                </div>
+                                <div class="col">
+                                    <label>billieTech&#64;gmail.com</label>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div> <!--End Tech Support Div-->
+
+
+                <!--Begin Shipping Policy-->
+                <div class="tab-pane fade" id="shipping-policy" role="tabpanel" aria-labelledby="list-settings-list">
+                    <h1 class="text-center">Shipping Policy</h1>
+                    <p>Most products will ship from our facility within 1-2 business days after order placement. For
+                        products over 150 lbs,
+                        please refer to our freight page for more details.</p>
+                    <p>Express shipment orders placed after 12PM EST will be shipped the next business day. Our free
+                        shipping option (orders
+                        over $49 to contiguous US) will ship via the cheapest ground service.</p>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Shipping Method</th>
+                                <th>Estimated Delivery Time</th>
+                                <th>Weekend Delivery</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>FedEx Priority Overnight</td>
+                                <td>Next business day</td>
+                                <td>Extra fee for weekend delivery (optional)</td>
+                            </tr>
+                            <tr>
+                                <td>Ground Shipping</td>
+                                <td>2-5 business days</td>
+                                <td>Yes (most residential locations)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>Tracking updates may be slow, and there may be periods without updates. For shipping to PO Boxes,
+                        USPS tracking is
+                        required.</p>
+                </div>
+                <!--End Shipping Policy-->
+
+            </div> <!--End col 2-->
+        </div>
+    </div>
+</div>
