made footer disappear

--- a/src/app/shared/footer-lion/footer.component.html
+++ b/src/app/shared/footer-lion/footer.component.html
@@ -1,6 +1,4 @@
-<footer class="text-center text-lg-start bg-body-tertiary text-muted">
-
-
+<footer class="text-center text-lg-start bg-body-tertiary text-muted d-none d-md-block">
     <!-- Section: Links  -->
     <section class="" style="background-color: #4165C0;">
         <div class="container text-center text-md-start mt-5">
