--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -61,12 +61,15 @@
     </a>
 </div>
 
-<div class="offcanvas offcanvas-start CategoryHeaderOffcanvas" tabindex="-1" aria-labelledby="CategoryHeaderOffcanvasLabel">
+<div class="categoryNavOffCanvas offcanvas offcanvas-start CategoryHeaderOffcanvas" tabindex="-1"
+    aria-labelledby="CategoryHeaderOffcanvasLabel">
+
     <div class="offcanvas-header">
         <button type="button" id="btnCloseOffcanvas" class="btn-close" data-bs-dismiss="offcanvas"
             aria-label="Close"></button>
     </div>
-    <div class="categoryNavOffCanvas text-center d-flex flex-column m-3 p-2 align-items-center gap-4">
+
+    <div class=" text-center d-flex flex-column my-3 p-2 align-items-center gap-4">
         <a style="font-weight: bold;" href="#">Offers</a>
         <div class="separatorOffCanvas"></div>
         <a href="#">Desktops</a>
@@ -78,5 +81,23 @@
         <a href="#">Phones</a>
         <div class="separatorOffCanvas"></div>
         <a href="#">Headphones</a>
+    </div>
+
+    <div class="text-center d-flex flex-column mt-5 p-2 align-items-center gap-4">
+        
+        <a href="#!" class="text-reset">About Us</a>
+        <a href="#!" class="text-reset">Contact Us</a>
+
+        <img src="assets/images/logo/Logo JX-HIFI.png" alt="logo jx-hifi" width="100">
+
+        <div>
+            <h5>
+                This is our project, it's a really cool badasss mofo project
+            </h5>
+            <h6>
+                © 2024 Bisoux, Caresses et Popcorns aux chocolat !
+            </h6>
+            
+        </div>
     </div>
 </div>
