--- a/src/app/shared/header-jean/header.component.css
+++ b/src/app/shared/header-jean/header.component.css
@@ -17,6 +17,14 @@
     height: 20px;
     margin: auto 5px;
 }
+
+@media (min-width: 768px) {
+    .searchBar {
+        width: 50% !important;
+    }
+}
+
+/* Style pour le HeaderOffCanvas des Category */
 .separatorOffCanvas {
     border-top: 2px solid rgba(16, 60, 172, 1);
     border-radius: 1px;
@@ -27,9 +35,6 @@
 .categoryNavOffCanvas a {
     color: black;
 }
-
-@media (min-width: 768px) {
-    .searchBar {
-        width: 50% !important;
-    }
+.categoryNavOffCanvas {
+    background-color: rgb(178, 200, 255);
 }
