layout dashboard coorection image

--- a/src/app/moduleAdmin/component/header-dashboard/header-dashboard.component.html
+++ b/src/app/moduleAdmin/component/header-dashboard/header-dashboard.component.html
@@ -3,13 +3,13 @@
     <div class="d-flex align-items-center">
       <!-- Sidebar Toggle Button (Only visible on small screens) -->
       <button class="btn btn-outline-secondary sidebar-toggle me-2 border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
-        <img src="/assets/menu-8-2.svg" alt="burger menu">
+        <img src="/assets/admin/assets/menu-8-2.svg" alt="burger menu">
       </button>
-      <img class="navbar-brand ms-5" src="/assets/logo/Logo%20JX-HIFI%20extern%20transparent.png" alt="logo compagnie">
+      <img class="navbar-brand ms-5" src="/assets/admin/assets/logo/Logo%20JX-HIFI%20extern%20transparent.png" alt="logo compagnie">
       <!-- Search Form -->
       <form class=" d-sm-flex form-search" role="search">
         <div class="input-group">
-          <span class="input-group-text"><img src="/assets/svgIcon/search.svg" alt="search" height="16"
+          <span class="input-group-text"><img src="/assets/admin/assets/svgIcon/search.svg" alt="search" height="16"
                                               width="16"></span>
           <input class="form-control ms-auto" type="search" placeholder="Recherche de Produit" aria-label="Recherche">
         </div>
