--- a/src/app/moduleAdmin/component/off-caneva-dashboard/off-caneva-dashboard.component.html
+++ b/src/app/moduleAdmin/component/off-caneva-dashboard/off-caneva-dashboard.component.html
@@ -7,32 +7,32 @@
     <ul class="nav nav-underline flex-column">
       <li class="nav-item mb-3">
         <a routerLink="/admin/indexAdmin" routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/indexAdmin')" >
-          <img class="icon me-2" src="/assets/svgIcon/house.svg" alt="Home"> Accueil
+          <img class="icon me-2" src="/assets/admin/assets/svgIcon/house.svg" alt="Home"> Accueil
         </a>
       </li>
       <li class="nav-item mb-3">
         <a routerLink="/admin/catalogue"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/catalogue')">
-          <img class="icon me-2" src="/assets/svgIcon/pc-display.svg" alt="Catalogue"> Catalogue des Produits
+          <img class="icon me-2" src="/assets/admin/assets/svgIcon/pc-display.svg" alt="Catalogue"> Catalogue des Produits
         </a>
       </li>
       <li class="nav-item mb-3">
         <a routerLink="/admin/categories"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/categories')">
-          <img class="icon me-2" src="/assets/svgIcon/collection.svg" alt="Categories"> Categories
+          <img class="icon me-2" src="/assets/admin/assets/svgIcon/collection.svg" alt="Categories"> Categories
         </a>
       </li>
       <li class="nav-item mb-3">
         <a routerLink="/admin/commande"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/commande')">
-          <img class="icon me-2" src="/assets/svgIcon/bag.svg" alt="Orders"> Liste des commandes
+          <img class="icon me-2" src="/assets/admin/assets/svgIcon/bag.svg" alt="Orders"> Liste des commandes
         </a>
       </li>
       <li class="nav-item mb-3">
         <a routerLink="/admin/registreUtilisateur"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/registreUtilisateur')">
-          <img class="icon me-2" src="/assets/svgIcon/people.svg" alt="Users"> Registre des Utilisateurs
+          <img class="icon me-2" src="/assets/admin/assets/svgIcon/people.svg" alt="Users"> Registre des Utilisateurs
         </a>
       </li>
       <li class="nav-item mb-3">
         <a routerLink="/admin/magasin"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('/admin/magasin')">
-          <img class="icon me-2" src="/assets/svgIcon/buildings.svg" alt="Shops"> Gestion des Magasins
+          <img class="icon me-2" src="/assets/admin/assets/svgIcon/buildings.svg" alt="Shops"> Gestion des Magasins
         </a>
       </li>
     </ul>
@@ -40,13 +40,13 @@
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
         <a href="#" class="nav-link link-body-emphasis" data-bs-toggle="modal" data-bs-target="#modalParametre">
-          <img src="/assets/svgIcon/gear.svg" alt="paramètre" class="icon-nav me-2">
+          <img src="/assets/admin/assets/svgIcon/gear.svg" alt="paramètre" class="icon-nav me-2">
           Paramètre
         </a>
       </li>
       <li class="nav-item">
         <a href="#" class="nav-link link-body-emphasis">
-          <img src="/assets/leave-3.svg" alt="sign-out" class="icon-nav me-2">
+          <img src="/assets/admin/assets/leave-3.svg" alt="sign-out" class="icon-nav me-2">
           Déconnections
         </a>
       </li>
