--- a/src/app/pages/acceuil-lion/acceuil-lion.component.html
+++ b/src/app/pages/acceuil-lion/acceuil-lion.component.html
@@ -88,6 +88,15 @@
                     </div>
                 </div>
 
+                <div class="col-sm-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <label class="card-title text-wrap fs-5">Headhpone</label>
+                            <img class="img-fluid" src="/assets/images/categories/headphones.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
